# ParetoInvest

./: .gitignore  Activating  Calling  Changing  Dockerfile  Dockerfile_OLD  LICENSE  README.md  Running  main.py  main.spec  paretoInvest.bat  pyproject.toml  requirements.txt
.github/workflows/: build.yml  build.yml_2  build_docker.yml  build_macos.yml  build_ubuntu.yml  build_windows.yml  build_windows.yml_2  test.yml
ParetoInvest/: Calling  main.py  paretoInvest.bat
ParetoInvest/libraries/: Lib_Alpaca.py  Lib_IB.py
ParetoInvest/models/: Assets.py  GenerarArchivosEstadisticos_JMetal.py  IB_data_loader.py  JMetal_Worker.py
ParetoInvest/tests/: test_smoke.py
ParetoInvest/ui/: main_window.py  test_gui.py  ui_components.py  ui_event_handlers.py
config/: Lib_Alpaca.json  config.json
data/Assets/: Assets.csv  Assets_Sector.csv
docs/ParetoInvest/: index.html  main.html
docs/ParetoInvest/libraries/: Lib_Alpaca.html  Lib_IB.html  Lib_Logger.html  index.html
docs/ParetoInvest/models/: Assets.html  GenerarArchivosEstadisticos_JMetal.html  IB_data_loader.html  JMetal_Worker.html  index.html
docs/ParetoInvest/pyinstaller_hooks/: hook-yfinance.html  index.html
docs/ParetoInvest/tests/: index.html  test_smoke.html
docs/ParetoInvest/ui/: index.html  main_window.html  test_gui.html  ui_components.html  ui_event_handlers.html
libraries/: Lib_Alpaca.py  Lib_Logger.py
models/: Assets.py  GenerarArchivosEstadisticos_JMetal.py  IB_data_loader.py  JMetal_Worker.py
pyinstaller_hooks/: hook-yfinance.py
tests/: test_smoke.py
ui/: main_window.py  ui_components.py  ui_event_handlers.py
